--- a/时钟/index.html
+++ b/时钟/index.html
@@ -17,13 +17,6 @@
             top: 0px;
         }
 
-        div {
-            position: absolute;
-            left: 0px;
-            top: 0px;
-            font-family: monospace;
-        }
-
         html, body {
             width: 100%;
             height: 100%;
@@ -32,8 +25,7 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <div id="result"></div>
+    <canvas id="bg"></canvas>
     <script src="main.js"></script>
 </body>
-
 </html>
