--- a/烟花/index.html
+++ b/烟花/index.html
@@ -11,29 +11,15 @@
             margin: 0px;
         }
 
-        canvas {
-            position: absolute;
-            left: 0px;
-            top: 0px;
-        }
-
-        div {
-            position: absolute;
-            left: 0px;
-            top: 0px;
-            font-family: monospace;
-        }
-
         html, body {
             width: 100%;
             height: 100%;
+            background-color: #000;
         }
     </style>
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <div id="fps"></div>
     <script src="main.js"></script>
 </body>
-
 </html>
